--- a/index.html
+++ b/index.html
@@ -3,42 +3,101 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HTML Challenge</title>
+  <title>kripeshpersnalsite</title>
 </head>
 
 <body>
-  <h1>HTML Challenge</h1>
-  <hr size=3 noshade>
-  <a href="https://developer.mozilla.org/en-US/"> link to mdn documentation</a>
-<table>
-  <tr>
-    <td>  <table>
-        <tr>
-          <td> one </td>
+  <table cellspacing="20">
+    <tr>
+      <td> <img src="./kripesh.jpg" height="200px" width="200px" alt="kripesh karki profile picture"></td>
+      <td>
+        <h1>kripesh karki</h1>
+        <p><em> Former Pharmacist and <strong><a href="https://www.computerscience.org/careers/web-developer/ " target="_blank">Web Developer </a></strong></em></p>
+        <p>i am licensed pharmacist who have been practising pharmacy for few years now and since i decided to move to united states i wanted to pursue my coding passion where i decided
+          learn coding by self teaching method .💚</p>
+    </tr>
+  </table>
+  <hr size="3" noshade>
+  <h2>Education and Achievements</h2>
+  <ul>
+    <li>from year 2009 to 2011 -<a href="https://www.dav.edu.np/" target="_blank">DAV school</a> </li>
+    <li>from year 2011 to 2015 - adichunchunagiri college of pharmacy</li>
+    <li>from year 2015 to 2019 - worked as pharmacist in <a href="https://www.super-care.ae/ " target="_blank">super care pharmacy</a> Dubai </li>
+  </ul>
+  <hr size="3" noshade>
+  <h3>My Hobbies</h3>
+  <ol>
+    <li>playing fifa</li>
+    <li>studying coding</li>
+    <li>travelling</li>
+  </ol>
+  <a href="file:///home/ashim/Desktop/web%20development/html_personal%20site/contact%20me%20deatils.html" target="_blank">contact details</a>
+  <hr size="3" noshade>
+  <h3>work experience </h3>
 
-          </tr>
+  <table>
+    <thead>
+      <tr>
+        <th>dates</th>
+        <th>work experience</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+    <tfoot>
+    </tfoot>
+
+    <tr>
+      <td>2015-2016 </td>
+      <td>roaming in kathmandu</td>
+    </tr>
+    <tr>
+      <td>2016-2017 </td>
+      <td>did full masti in dubai i mean full chilax </td>
+    </tr>
+    <tr>
+      <td>2019</td>
+      <td> US ayera dherai dukha gariyo ke garne </td>
+    </tr>
+  </table>
+  <h3>skill</h3>
+  <table cellspacing="10">
+    <tr>
+
+      <td>
+        <table>
           <tr>
-            <td> two</td>
+            <td>
+              <table>
+                <tr>
+                  <td> swimming </td>
+                  <td> ⭐⭐⭐⭐⭐</td>
+                <tr>
+                  <td> cooking </td>
+                  <td> ⭐⭐⭐⭐</td>
+                </tr>
+              </table>
 
-          </tr>
-      </table>
-    </td>
-    <td>
-      <table>
-        <tr>
-          <td> three</td>
+            </td>
 
-          </tr>
-          <tr>
-            <td>four</td>
+            <td>
+              <table>
+                <tr>
+                  <td>
+                    <table>
+                      <tr>
+                        <td> swimming </td>
+                        <td> ⭐⭐⭐⭐⭐</td>
+                      <tr>
+                        <td> cooking </td>
+                        <td> ⭐⭐⭐⭐</td>
+                      </tr>
+                    </table>
 
-          </tr>
-      </table>
-    </td>
 
-  </tr>
-
-</table>
+                  </td>
+                </tr>
+              </table>
 
 
 
